--- a/full-site-underdev/styles.css
+++ b/full-site-underdev/styles.css
@@ -96,7 +96,7 @@ footer{
 	/*height: 70px;*/
 	text-align: center;
 	margin-top: 50px;
-	
+
 }
 
 footer.fixed{
@@ -109,9 +109,9 @@ footer i{
 	color: white;
 	margin-top: 40px;
     margin-bottom: 40px;
-    font-size: 25px;
-    margin-left: 5px;
-    margin-right: 5px;
+    font-size: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 footer i:hover{
@@ -140,6 +140,11 @@ footer i:hover{
 .navbar-light .navbar-nav .nav-logo .nav-link{
 	text-transform: initial;
 }
+
+.nav-link:active, .nav-link.active{
+	color:var(--main-dark-pink) !important
+}
+
 
 .navbar-expand-lg{
 	height: 80px;
@@ -243,6 +248,20 @@ footer i:hover{
 	padding-top:0px;
 }
 
+.sponsors_gallery{
+	margin: auto;
+	top: -80px;
+}
+
+.sponsors_gallery a{
+	color: var(--main-dark-pink);
+	text-decoration: underline;
+}
+
+.sponsors_gallery a:hover{
+	color: var(--main-dark-pink);
+}
+
 
 /*****Travel Page******/
 .travel{
@@ -330,6 +349,7 @@ footer i:hover{
 	color: white;
 	z-index: -1;
 }
+
 
 .other h4{
 	margin-top: 50px;
@@ -536,7 +556,7 @@ box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 	}
 
 	.dropdown-menu{
-		/*border: 0px;*/
+		border: 0px;
 		text-align: center;
 		color: var(--main-dark-pink);
 	}
@@ -567,14 +587,23 @@ box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 	.float{
 		top: 0px;
 	}
-
+    /****Travel****/
 	.car.float{
 		margin-top: 0px;
+	}
+
+	.route_item.south{
+		text-align: left;
+	}
+
+	.route_item.south h6{
+		display: block;
 	}
 
 	/*****FAQ*****/
 	.wrapper2{
 		width: 100%;
+		margin: 0px;
 	}
    
 	.box{
@@ -603,6 +632,10 @@ box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 
 	h5{
 		font-size: 20px;
+	}
+
+	.float{
+		padding-bottom: 20%;
 	}
 
 	/***Home Page****/
