--- a/full-site-underdev/styles.css
+++ b/full-site-underdev/styles.css
@@ -93,13 +93,11 @@ a{
 
 footer{
 	background-color: var(--main-black);
-	/*height: 70px;*/
 	text-align: center;
-	margin-top: 50px;
 
 }
 
-footer.fixed{
+.footer.fixed{
 	bottom: 0;
     position: fixed;
     width: 100%;
@@ -262,6 +260,9 @@ footer i:hover{
 	color: var(--main-dark-pink);
 }
 
+.sponsors_wrap{
+	margin: auto;
+}
 
 /*****Travel Page******/
 .travel{
@@ -313,14 +314,23 @@ footer i:hover{
 	color: white;
 }
 
+.car img{
+	margin-top: 150px;
+}
+
 .car .car_text{
 	margin: auto;
 }
+
 .car .car_text h5.col-lg-8{
 	margin-bottom: 50px;
 }
 .car.float{
 	margin-top: -50px;
+}
+
+.car_par{
+	margin-bottom: 50px;
 }
 
 .car_reimb{
@@ -350,13 +360,13 @@ footer i:hover{
 	z-index: -1;
 }
 
-
 .other h4{
 	margin-top: 50px;
 }
 
 .other a{
 	text-decoration: underline;
+	color: white;
 }
 
 /*****Schedule Page******/
@@ -364,12 +374,19 @@ footer i:hover{
 	background-color: var(--main-light-pink);
 }
 
+.calendar.float{
+	top: -200px;
+}
+
 .calendar{
 	background-color: var(--main-black);
-	color: white;
+	color: var(--main-light-pink);
 	text-align: center;
 }
 
+.side-graphics img{
+	width: 100%;
+}
 /*****FAQ Page******/
 .faq{
 	background-color: var(--main-dark-pink);
@@ -446,7 +463,6 @@ footer i:hover{
 .block{
 	padding-top: 100px;
 	padding-bottom: 100px;
-	margin-bottom: 100px;
 }
 
 .box{
@@ -586,7 +602,13 @@ box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 
 	.float{
 		top: 0px;
+		padding-bottom: 10%;
 	}
+
+	.side-graphics img{
+		display: none;
+	}
+
     /****Travel****/
 	.car.float{
 		margin-top: 0px;
@@ -610,10 +632,19 @@ box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 		margin-left: auto;
 		margin-right: auto;
 	}
+
+	/*****Schedule****/
+	.calendar.float{
+		top: -100px;
+	}
    
 }
 
 @media only screen and (max-width: 768px) {
+	footer i{
+		margin-left: 30px;
+		margin-right: 30px;
+	}
 }
 
 @media only screen and (max-width: 576px){
@@ -633,6 +664,14 @@ box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 	h5{
 		font-size: 20px;
 	}
+
+	footer i{
+		font-size: 25px;
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+
+
 
 	.float{
 		padding-bottom: 20%;
