--- a/full-site-underdev/styles.css
+++ b/full-site-underdev/styles.css
@@ -74,6 +74,30 @@ a{
 	font-family: 'Caviar Dreams';
 }
 
+button:focus{
+	outline: 0px;
+}
+
+footer{
+	background-color: var(--main-black);
+	text-align: center;
+
+}
+
+footer i{
+	color: white;
+	margin-top: 40px;
+    margin-bottom: 40px;
+    font-size: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+footer i:hover{
+	color: var(--main-dark-pink);
+	cursor: pointer;
+}
+
 .float{
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 	margin: auto;
@@ -89,32 +113,6 @@ a{
 .subtitle h2{
 	padding-top: 80px;
 	padding-bottom: 130px;
-}
-
-footer{
-	background-color: var(--main-black);
-	text-align: center;
-
-}
-
-.footer.fixed{
-	bottom: 0;
-    position: fixed;
-    width: 100%;
-}
-
-footer i{
-	color: white;
-	margin-top: 40px;
-    margin-bottom: 40px;
-    font-size: 30px;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-footer i:hover{
-	color: var(--main-dark-pink);
-	cursor: pointer;
 }
 
 /******Navbar********/
@@ -135,12 +133,16 @@ footer i:hover{
     margin-right: 5px;
 }
 
-.navbar-light .navbar-nav .nav-logo .nav-link{
+/*.navbar-light .navbar-nav .nav-logo .nav-link{
 	text-transform: initial;
 }
-
+*/
 .nav-link:active, .nav-link.active{
 	color:var(--main-dark-pink) !important
+}
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover{
+	outline: 0px;
 }
 
 
@@ -217,6 +219,24 @@ footer i:hover{
 
 .home-bg img{
 	width: 120%;
+}
+
+
+button.register{
+	background-color: var(--main-dark-pink);
+	/*background-color: var(--main-black);*/
+    text-transform: uppercase;
+    border: none;
+    padding: 3% 3% 3% 3%;
+    font-size: 20px;
+    border-radius: 200px;
+    color: var(--main-white);
+    margin-top: 20px;
+}
+
+button.register:hover{
+	background-color: var(--main-black);
+	cursor: pointer;
 }
 
 .intro{
@@ -658,12 +678,37 @@ footer i:hover{
 		margin-right: 5px;
 	}
 
-
-
 	.float{
 		padding-bottom: 20%;
 	}
 
+	.subtitle h2{
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+
 	/***Home Page****/
-	/**/
+	.sponsors .subtitle{
+		height: auto;
+	}
+	.sponsors .subtitle h2{
+		padding-top: 20px;
+	}
+
+
+	/***Schedule Page****/
+	.calendar.float{
+		top: 0px;
+	}
+
+	.fixed{	/**Delete fixed class later*/
+		bottom: 0;
+		position: fixed;
+		width: 100%;
+	}
+
+	/****Wrapper Page****/
+	.wrapper{
+		top: -30px;
+	}
 }
